Refactored as elasnetmt

--- a/sandbox/Test_ANM_1TCD.ipynb
+++ b/sandbox/Test_ANM_1TCD.ipynb
@@ -17,7 +17,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "00b2c463d57b4f2cacfce02c5fdc4431",
+       "model_id": "b2447ba6d0b2400590787d8593a153ee",
        "version_major": 2,
        "version_minor": 0
       },
@@ -37,7 +37,7 @@
    ],
    "source": [
     "import molsysmt as msm\n",
-    "import enmt as enm"
+    "import elasnetmt as enm"
    ]
   },
   {
@@ -61,37 +61,37 @@
       "text/html": [
        "<style type=\"text/css\">\n",
        "</style>\n",
-       "<table id=\"T_5ce47\">\n",
+       "<table id=\"T_d54ac\">\n",
        "  <thead>\n",
        "    <tr>\n",
-       "      <th id=\"T_5ce47_level0_col0\" class=\"col_heading level0 col0\" >form</th>\n",
-       "      <th id=\"T_5ce47_level0_col1\" class=\"col_heading level0 col1\" >n_atoms</th>\n",
-       "      <th id=\"T_5ce47_level0_col2\" class=\"col_heading level0 col2\" >n_groups</th>\n",
-       "      <th id=\"T_5ce47_level0_col3\" class=\"col_heading level0 col3\" >n_components</th>\n",
-       "      <th id=\"T_5ce47_level0_col4\" class=\"col_heading level0 col4\" >n_chains</th>\n",
-       "      <th id=\"T_5ce47_level0_col5\" class=\"col_heading level0 col5\" >n_molecules</th>\n",
-       "      <th id=\"T_5ce47_level0_col6\" class=\"col_heading level0 col6\" >n_entities</th>\n",
-       "      <th id=\"T_5ce47_level0_col7\" class=\"col_heading level0 col7\" >n_proteins</th>\n",
-       "      <th id=\"T_5ce47_level0_col8\" class=\"col_heading level0 col8\" >n_structures</th>\n",
+       "      <th id=\"T_d54ac_level0_col0\" class=\"col_heading level0 col0\" >form</th>\n",
+       "      <th id=\"T_d54ac_level0_col1\" class=\"col_heading level0 col1\" >n_atoms</th>\n",
+       "      <th id=\"T_d54ac_level0_col2\" class=\"col_heading level0 col2\" >n_groups</th>\n",
+       "      <th id=\"T_d54ac_level0_col3\" class=\"col_heading level0 col3\" >n_components</th>\n",
+       "      <th id=\"T_d54ac_level0_col4\" class=\"col_heading level0 col4\" >n_chains</th>\n",
+       "      <th id=\"T_d54ac_level0_col5\" class=\"col_heading level0 col5\" >n_molecules</th>\n",
+       "      <th id=\"T_d54ac_level0_col6\" class=\"col_heading level0 col6\" >n_entities</th>\n",
+       "      <th id=\"T_d54ac_level0_col7\" class=\"col_heading level0 col7\" >n_proteins</th>\n",
+       "      <th id=\"T_d54ac_level0_col8\" class=\"col_heading level0 col8\" >n_structures</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <td id=\"T_5ce47_row0_col0\" class=\"data row0 col0\" >molsysmt.MolSys</td>\n",
-       "      <td id=\"T_5ce47_row0_col1\" class=\"data row0 col1\" >3818</td>\n",
-       "      <td id=\"T_5ce47_row0_col2\" class=\"data row0 col2\" >497</td>\n",
-       "      <td id=\"T_5ce47_row0_col3\" class=\"data row0 col3\" >2</td>\n",
-       "      <td id=\"T_5ce47_row0_col4\" class=\"data row0 col4\" >2</td>\n",
-       "      <td id=\"T_5ce47_row0_col5\" class=\"data row0 col5\" >2</td>\n",
-       "      <td id=\"T_5ce47_row0_col6\" class=\"data row0 col6\" >1</td>\n",
-       "      <td id=\"T_5ce47_row0_col7\" class=\"data row0 col7\" >2</td>\n",
-       "      <td id=\"T_5ce47_row0_col8\" class=\"data row0 col8\" >1</td>\n",
+       "      <td id=\"T_d54ac_row0_col0\" class=\"data row0 col0\" >molsysmt.MolSys</td>\n",
+       "      <td id=\"T_d54ac_row0_col1\" class=\"data row0 col1\" >3818</td>\n",
+       "      <td id=\"T_d54ac_row0_col2\" class=\"data row0 col2\" >497</td>\n",
+       "      <td id=\"T_d54ac_row0_col3\" class=\"data row0 col3\" >2</td>\n",
+       "      <td id=\"T_d54ac_row0_col4\" class=\"data row0 col4\" >2</td>\n",
+       "      <td id=\"T_d54ac_row0_col5\" class=\"data row0 col5\" >2</td>\n",
+       "      <td id=\"T_d54ac_row0_col6\" class=\"data row0 col6\" >1</td>\n",
+       "      <td id=\"T_d54ac_row0_col7\" class=\"data row0 col7\" >2</td>\n",
+       "      <td id=\"T_d54ac_row0_col8\" class=\"data row0 col8\" >1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n"
       ],
       "text/plain": [
-       "<pandas.io.formats.style.Styler at 0x7ad0c7a0bec0>"
+       "<pandas.io.formats.style.Styler at 0x7c2896bf7800>"
       ]
      },
      "execution_count": 3,
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "0de52d97-aed3-4427-9915-518a0077dbd8",
    "metadata": {},
    "outputs": [],
@@ -146,25 +146,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "0bdb94d8-e316-4997-8637-bbf6d7491379",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "aed556b527a54edf99c3d2beadfd6bc3",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "NGLWidget(max_frame=59)"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "view"
    ]
