--- a/sandbox/Test_GNM_1V4S.ipynb
+++ b/sandbox/Test_GNM_1V4S.ipynb
@@ -16,7 +16,7 @@
    "outputs": [],
    "source": [
     "import molsysmt as msm\n",
-    "import enmt as enm\n",
+    "import elasnetmt as enm\n",
     "import molsysmt as msm\n",
     "import nglview as nv\n",
     "from molsysmt import pyunitwizard as puw\n",
